            Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
            nRF5x: Make FlashWrite cope with flash writes > 4k
            Increase max size of native strings on platforms that support it - 16 bit to 32 bit (#1432)
            Fix stack size detection on Linux (fix #1427)
            Fix strncat/cpy bounding issues (fix #1425)

     1v98 : Allow Crypto SHA1 without SHA256/512 (for ESP8266 where flash is scarce)
            Add better docs for the form of Wifi callback functions
            Modify ESP8266/ESP32 callbacks to match the node.js style used elsewhere
            nRF52: fix pin.toggle() on software-negated pins
            Pixl.js: Reorder pins so 0..13 are also D0..13 for better Arduino compatibility
            Fix dump() when used with code written using E.setBootCode(..), (fix #1398)
            Allow parseInt/parseFloat to be used on very large strings if the number doesn't extend right to the end (fix #1397)
            nRF5x: Fix memory leak on NRF.connect
            Fix memory leak if an exception is thrown within a rejected promise
            ESP8266: rewrite wifi.save and restore to use the storage lib (imp #1380)
	    ESP8266: Add missing option ssid_hidden for Wifi.startAP() (imp #1358)
            Fixed double-connect issue for TCP sockets
            Pixl.js: Ensure Pixl.menu changes to bitmap fonts
            Pixl.js: tweaked bias/contrast to improve display quality
            ESP32: update esp-idf to v3.0. BLE support - thanks to @jumjum. Erase flash before flashing. vars now 2500
            ESP8266: rearange rf_cal_sector (fix #1294)
            ESP8266: Wifi.scan() now return authmode as text 
            ESP32: Fix accidental initialisation of UART3 when switching to Telnet (fix #1362)
            nRF52: Added `NRF.setAddress` to allow the MAC address to be changed
            Added Graphics.setFontAlign for font alignment and rotation